--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
+    "start:4004": "PORT=4004 nuxt start",
     "start:http-server": "export NODE_TLS_REJECT_UNAUTHORIZED=0 && npx http-server dist -a localhost -p 4004 -C cert.pem -K key.pem -S -b",
     "start:https": "export NODE_TLS_REJECT_UNAUTHORIZED=0 && PORT=4004 nuxt start --env.NODE_TLS_REJECT_UNAUTHORIZED=0",
-    "inspect": "npx lighthouse http://localhost:3003/ --view --output html --output-path ./lighthouse-report.html",
+    "inspect": "npx lighthouse http://localhost:4004/ --view --output html --output-path ./lighthouse-report.html",
     "inspect:https": "npx lighthouse https://localhost:4004/ --view --output html --output-path ./lighthouse-report.html",
     "generate": "nuxt generate"
   },
